ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.1, 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Networking & Observability
    • Fully Compatible
    • Windows
    • v8.2
    • N&O 2025-08-04, N&O 2025-09-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      .NET driver fails to start mongocryptd on Windows, on latest build with:

       {"t":{"$date":"2025-06-12T02:00:13.775+01:00"},"s":"D1", "c":"ASSERT",   "id":23074,   "ctx":"thread1","msg":"User assertion","attr":{"error":"FileNotOpen: Failed probe for \"C:\\data\\mci\\683b\\mongo-csharp-driver\\tests\\MongoDB.Driver.Tests\\bin\\Release\\net6.0\\NUL\": Incorrect function","location":"src/mongo/db/initialize_server_global_state.cpp:322:1:checkAndMoveLogFile"}}
      

      First observed failing build: 8.2.0-alpha-1295-g831ccff
      Last observed working build: 8.2.0-alpha-1139-g3baedc5
      Works on versions 4 to 8.

      Failure with NUL log:
      --logpath NUL --logappend

      Success with a log file:
      --logpath 1.txt --logappend

            Assignee:
            Didier Nadeau
            Reporter:
            Boris Dogadov
            Votes:
            0 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved: