SERVER-106469 Handle null device for logpath on Windows (#41284)

GitOrigin-RevId: f4cead6f9321bb3ee603a9f6719c702da0f9e99d